@@ -234,6 +234,12 @@ FRC crossings 0.5: 0.0335  0.25: 0.0468  0.125: 0.0898  is 0.1025 at 0.25/pix   
       dialog box that comes up.&nbsp; If it is running on the K2 computer, then a 
       folder chooser will come up just as it does for selecting the frame folder.</p>
     <p>
+      <b>Use same folder as frames</b></p>
+    <p>
+      Select this option to have command files written into the same folder as the 
+      frames, thus overriding any entry that was made with the <b>Set Folder</b> 
+      button.</p>
+    <p>
       <b>New Parameter Set</b></p>
     <p>
       Press this button to create a new set of parameters that start out as a copy of 
